I made huge changes, hopefully I didn't just break everything
